--- a/fyp-frontend/package.json
+++ b/fyp-frontend/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-webcam": "^7.1.1",
     "rebass": "^4.0.7",
     "three": "^0.157.0",
