--- a/fyp-frontend/package.json
+++ b/fyp-frontend/package.json
@@ -28,12 +28,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+   
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +57,7 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
+  "name": "my-app",
+  "version": "0.1.0",
   "homepage": "https://emmacelia.github.io/FYP_Frontend"
 }
