--- a/fyp-frontend/package.json
+++ b/fyp-frontend/package.json
@@ -25,9 +25,11 @@
     "react-webcam": "^7.1.1",
     "rebass": "^4.0.7",
     "three": "^0.157.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "serve": "^11.3.2"
   },
   "scripts": {
+    "start:prod": "serve -s build",
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
