--- a/fyp-frontend/Dockerfile
+++ b/fyp-frontend/Dockerfile
@@ -7,8 +7,11 @@ WORKDIR /usr/src/app
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
+# Set NODE_ENV to development
+ENV NODE_ENV development
+
 # Install the application dependencies
-RUN npm install
+RUN npm ci
 
 # Copy the rest of the application code to the working directory
 COPY . .
