--- a/fyp-frontend/package.json
+++ b/fyp-frontend/package.json
@@ -8,9 +8,6 @@
     "@mui/base": "^5.0.0-beta.17",
     "@mui/material": "^5.15.11",
     "@react-three/fiber": "^8.14.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "file-saver": "^2.0.5",
@@ -24,15 +21,15 @@
     "react-spinners": "^0.13.8",
     "react-webcam": "^7.1.1",
     "rebass": "^4.0.7",
+    "serve": "^11.3.2",
     "three": "^0.157.0",
-    "web-vitals": "^2.1.4",
-    "serve": "^11.3.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start:prod": "serve -s build",
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,6 +51,22 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "babel-jest": "^29.7.0",
+    "gh-pages": "^6.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   }
 }
